interface done and some js

--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
 	<article id="mainContainer" class="container row">
 		<!-- <h1 id="logo">ANIMAL GIFS</h1> -->
 		<section id="buttonContainer" class=" col-lg-12 col-md-12 col-sm-12">
-			<button href="#">marco</button>
+			
 		</section>
-		<section class=" row col-lg-12 col-md-12 col-sm-12">
-			<div id="gifContainer" class="col-lg-6 col-md-6 col-sm-6">
+		<section id="secondContainer" class="row col-lg-12 col-md-12 col-sm-12">
+			<div id="gifContainer" class="col-lg-9 col-md-9 col-sm-9">
 
 				
 			</div>
-			<div id="addGifContainer" class="col-lg-6 col-md-6 col-sm-6">
-				<form>
-					<label>Add An Animal</label><br>
-					<input type="text" name="Animal Name" placeholder="Animal Name Here">
+			<div id="addGifContainer" class="col-lg-3 col-md-3 col-sm-3">
+				<form >
+					<label>ADD AN ANIMAL</label><br>
+					<input id="animalInput" type="text" name="Animal Name" placeholder="Your Text">
+					<input type="submit" value="ADD" id="submitButton">
 				</form>
 				
 			</div>
@@ -45,6 +46,6 @@
 		
 	</article>
 
-<script type="text/javascript" href="assets/javascript/main.js"></script>
+<script type="text/javascript" src="assets/javascript/main.js"></script>
 </body>
 </html>
