--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <!-- My style sheet -->
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+<link rel="icon" type="image/png" href="http://www.favicon.cc/logo3d/227400.png" sizes="32x32" />
+
 <!-- loads jquery -->
 <script src="https://code.jquery.com/jquery.js"></script>
 
